# entity-id

./: CHANGELOG.md  Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yml
crates/entity_id/: Cargo.toml  README.md
crates/entity_id/src/: lib.rs
crates/entity_id/tests/: integration_tests.rs
crates/entity_id_core/: Cargo.toml  README.md
crates/entity_id_core/src/: derive.rs  lib.rs
crates/entity_id_core/src/derive/: symbols.rs
crates/entity_id_derive/: Cargo.toml  README.md
crates/entity_id_derive/src/: lib.rs
crates/entity_id_derive/src/internals/: symbols.rs
crates/entity_id_derive/tests/: integration_tests.rs
crates/entity_id_tests/: Cargo.toml
crates/entity_id_tests/tests/: integration_tests.rs
src/: lib.rs
tests/: integration_tests.rs
