[package]
name = "entity_id"
version = "0.0.2"
description = "Production-grade entity IDs for your web application"
repository = "https://github.com/maxdeviant/entity-id"
documentation = "https://docs.rs/entity_id"
categories = ["web-programming"]
keywords = ["entity", "id", "identifier", "ulid", "derive"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_id_core = { version = "0.0.2", path = "../entity_id_core" }
entity_id_derive = { version = "0.0.2", path = "../entity_id_derive", optional = true }

[dev-dependencies]
ulid = "1.0.0"
uuid = "1.3.0"

[features]
default = ["derive"]
derive = ["entity_id_derive"]
uuid = ["entity_id_derive?/uuid"]
