[package]
name = "entity_id_derive"
version = "0.0.2"
description = "Production-grade entity IDs for your web application"
repository = "https://github.com/maxdeviant/entity-id"
documentation = "https://docs.rs/entity_id_derive"
categories = ["web-programming"]
keywords = ["entity", "id", "identifier", "ulid", "derive"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
entity_id_core = { version = "0.0.2", path = "../entity_id_core" }
proc-macro2 = "1.0.53"
quote = "1.0.26"
syn = "2.0.10"
ulid = "1.0.0"
uuid = { version = "1.3.0", optional = true }

[features]
uuid = ["dep:uuid", "entity_id_core/uuid"]
