[package]
name = "entity_id_tests"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_id = { path = "../entity_id" }
entity_id_core = { path = "../entity_id_core" }
ulid = "1.0.0"
uuid = "1.3.0"
